--- a/main.html
+++ b/main.html
@@ -13,8 +13,8 @@
   </head>
   <body class='bg-info text-white'>
       <div class='container text-center'>
-      <h1 class='display-1 mt-5'>Web Development</h1>
-      <p class = 'lead text-white'>Hi, I'm Jabar; Developer, Forward Thinker, Ready</p>
+      <h1 class='display-1 pt-4'>Web Development</h1>
+      <p class = 'lead text-blue text-align mr-5'>Hi, I'm Jabar;<br> Developer, Forward Thinker, Ready</p>
       <p>
   <a class="btn btn-dark mt-5 mr-3" data-toggle="collapse" href="#technologies" role="button" aria-expanded="false" aria-controls="technologies">Technologies</a>
   <button class="btn btn-dark mt-5 mr-3" type="button" data-toggle="collapse" data-target="#education" aria-expanded="false" aria-controls="education">Education</button>
@@ -54,18 +54,18 @@
   <li class="list-group-item">Phone: (424)-280-6141 </li>
   <li class="list-group-item">walterjbrasher@gmail.com</li>
   <li class="list-group-item">Social Media: <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/feed/">LinkedIn </a> </li>
-
+  <li class="list-group-item">GitHub: <a target="_blank" rel="noopener noreferrer" href="https://github.com/MusclesGlasses88">Git </a> </li>
     </div>
   </div>
 </div>
 </div>
 
     </div>
-    <script src="jQuery.js"></script>
+    <script src="jQuery/jQuery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <script src='main.js'></script>
-<//img class="source-image" src="coffeebackground.jpeg" alt="coffee" />
+    <script src='js/main.js'></script>
+<//img class="source-image  responsive" src="images/code.png" alt="code" />
   </body>
 </html>
